add delete user use-case to fastify app
